--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="item">
          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg"/>
-          <span>Myrtle Ave Tea</span>
+          <span>Avs's Special-T</span>
         </div>
         <div class="item">
           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg"/>
