--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   </header>
   <div class="main">
     <div id="mission" class="flex-container">
-      <div class="box">
+      <div id="bannercontent">
         <h2>Our Mission</h2>
         <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
       </div>
     </div>
    <div id="stuff">
       <h2>Tea of the Month</h2>
-      <h4>What&#39;s Steeping at The Tea Cozy?</h4>
+      <h4>What's Steeping at The Tea Cozy?</h4>
       <div class="flex-container items">
         <div class="item">
           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg"/>
@@ -39,7 +39,7 @@
         </div>
         <div class="item">
          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg"/>
-          <span>Ava's Special-T</span>
+          <span>Myrtle Ave Tea</span>
         </div>
         <div class="item">
           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg"/>
